@@ -53,7 +53,7 @@ libformats_la_SOURCES = \
 	fchkformat.cpp \
 	featformat.cpp fhformat.cpp fingerprintformat.cpp \
 	freefracformat.cpp gamessformat.cpp gaussformat.cpp \
-	gausscubeformat.cpp \
+	gausscubeformat.cpp gausszmatformat.cpp \
 	ghemicalformat.cpp gromos96format.cpp hinformat.cpp \
 	getinchi.cpp \
 	inchiformat.cpp jaguarformat.cpp mdlformat.cpp mmcifformat.cpp \
@@ -84,7 +84,7 @@ pkglib_LTLIBRARIES = \
 	fchkformat.la \
 	featformat.la fhformat.la fingerprintformat.la \
 	freefracformat.la gamessformat.la gaussformat.la ghemicalformat.la \
-	gausscubeformat.la \
+	gausscubeformat.la gausszmatformat.la \
 	gromos96format.la hinformat.la inchiformat.la \
 	jaguarformat.la mdlformat.la mmcifformat.la mmodformat.la \
 	mpdformat.la mol2format.la molreportformat.la mopacformat.la \
@@ -198,6 +198,9 @@ gaussformat_la_LDFLAGS = -module -avoid-version -no-undefined ../libopenbabel.la
 
 gausscubeformat_la_SOURCES = gausscubeformat.cpp obmolecformat.cpp
 gausscubeformat_la_LDFLAGS = -module -avoid-version -no-undefined ../libopenbabel.la 
+
+gausszmatformat_la_SOURCES = gausszmatformat.cpp obmolecformat.cpp
+gausszmatformat_la_LDFLAGS = -module -avoid-version -no-undefined ../libopenbabel.la
 
 ghemicalformat_la_SOURCES = ghemicalformat.cpp obmolecformat.cpp
 ghemicalformat_la_LDFLAGS = -module -avoid-version -no-undefined ../libopenbabel.la 
